hard-gists/c4329fa17f1b3f287341/run.log
=== Docker Run Log for c4329fa17f1b3f287341 ===
Started at: Mi 29. Okt 19:52:53 CET 2025

[2025-10-29 19:52:54] START: Running container for c4329fa17f1b3f287341
[2025-10-29 19:52:54] SUCCESS: Container e869d63c0ff8e01221d841eaf8fd321214b51a0c5fa396f4fe73d4dfda723c64 started for c4329fa17f1b3f287341
=== Container logs for c4329fa17f1b3f287341 ===
  File "/snippet.py", line 177
    print 'running'
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for c4329fa17f1b3f287341 ===
[2025-10-29 19:52:56] INFO: Container e869d63c0ff8e01221d841eaf8fd321214b51a0c5fa396f4fe73d4dfda723c64 has stopped
